--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 numpy==1.26.4
 opencv-python
-imutils
 dlib
 pillow
-PyYAML
-deepface
-onnxruntime
-tqdm
+tqdm          # progress bar, optional
+PyYAML        # only if you plan to load configs later
